config/canary-service.yaml
# stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-canary
  namespace: staging
spec:
  selector:
    app: my-backend # MUST match the Rollout Pod labels
    version: v1
  ports:
    - port: 80
      targetPort: 3000
